--- a/user/cpp/cpptest/Makefile
+++ b/user/cpp/cpptest/Makefile
@@ -1,48 +1,3 @@
 NAME=cpptest
-ROOT = ../../..
-BUILDL = $(BUILD)/user/cpp/$(NAME)
-BIN = $(BUILD)/user_$(NAME).bin
-LIB = $(ROOT)/lib/basic
-LIBC = $(ROOT)/lib/c
-LIBCPP = $(ROOT)/lib/cpp
-LIBGCC = $(ROOT)/lib/gcc
-LDCONF = $(ROOT)/lib/ld.conf
-SUBDIRS = . $(filter-out Makefile $(wildcard *.*),$(wildcard *))
-BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
-DEPS = $(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
-ADDLIBS = $(BUILD)/libustl.a $(BUILD)/libsupc++.a $(LIBGCC)/libgcc.a $(LIBGCC)/libgcc_eh.a
 
-CC = g++
-CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -I$(LIBCPP) -I$(LIBCPP)/ustl -I$(LIBC)/include \
-	-I$(LIB)/h -Wl,-T,$(LDCONF) -Wl,--build-id=none $(CPPDEFFLAGS) $(ADDFLAGS)
-
-# sources
-CSRC = $(shell find $(SUBDIRS) -mindepth 0 -maxdepth 1 -name "*.cpp")
-
-# objects
-START = $(BUILD)/libcpp_startup.o
-COBJ = $(patsubst %.cpp,$(BUILDL)/%.o,$(CSRC))
-
-.PHONY: all clean
-
-all:	$(BIN)
-
-$(BIN):	$(BUILDDIRS) $(LDCONF) $(COBJ) $(START) $(ADDLIBS)
-		@echo "	" LINKING $(BIN)
-		@$(CC) $(CFLAGS) -o $(BIN) $(START) $(BUILD)/libc.a $(COBJ) $(ADDLIBS);
-		@echo "	" COPYING ON DISK
-		$(ROOT)/tools/disk.sh copy $(BIN) /bin/$(NAME)
-
-$(BUILDDIRS):
-		@for i in $(BUILDDIRS); do \
-			if [ ! -d $$i ]; then mkdir -p $$i; fi \
-		done;
-
-$(BUILDL)/%.o:		%.cpp
-		@echo "	" CC $<
-		@$(CC) $(CFLAGS) -o $@ -c $< -MMD
-
--include $(DEPS)
-
-clean:
-		rm -f $(BIN) $(COBJ) $(DEPS)
+-include ../DefMakefile.mk
