A few improvements in the libcpp

--- a/lib/cpp/Makefile
+++ b/lib/cpp/Makefile
@@ -21,14 +21,18 @@ START = startup.s
 
 # objects
 COBJS = $(patsubst %.cpp,$(BUILDL)/%.o,$(CSRC))
+CPICOBJS = $(patsubst %.cpp,$(BUILDL)/%_pic.o,$(CSRC))
 # for long long arithmetic
 GCCLIB = $(GCCLIBDIR)/_divdi3.object \
 	$(GCCLIBDIR)/_moddi3.object \
 	$(GCCLIBDIR)/_udivdi3.object \
 	$(GCCLIBDIR)/_umoddi3.object
-LIBCOBJS = $(shell find $(BUILD)/lib/c -name "*_pic.o") \
+LIBCPICOBJS = $(shell find $(BUILD)/lib/c -name "*_pic.o") \
 	$(shell find $(BUILD)/lib/c -name "*_pic.s.o") \
 	$(GCCLIB)
+LIBCOBJS = $(filter-out $(LIBCPICOBJS),$(shell find $(BUILD)/lib/c -name "*.o") \
+	$(shell find $(BUILD)/lib/c -name "*.s.o") \
+	$(GCCLIB))
 STARTO = $(BUILD)/libcpp_startup.o
 
 .PHONY:		all clean
@@ -39,10 +43,10 @@ $(STLIB): $(BUILDDIRS) $(COBJS) $(LIBCOBJS)
 		@echo "	" AR $(STLIB)
 		@ar rcs $(STLIB) $(LIBCOBJS) $(COBJS)
 
-$(DYNLIB): $(BUILDDIRS) $(COBJS) $(LIBCOBJS)
+$(DYNLIB): $(BUILDDIRS) $(CPICOBJS) $(LIBCPICOBJS)
 		@echo "	" LINKING $(DYNLIB)
 		@$(CC) $(CFLAGS) -shared -Wl,--build-id=none -Wl,-T,$(SHLDCONF) -Wl,-soname,$(DYNLIBNAME) \
-			-o $(DYNLIB) $(LIBCOBJS) $(COBJS);
+			-o $(DYNLIB) $(LIBCPICOBJS) $(CPICOBJS);
 		$(ROOT)/tools/disk.sh copy $(DYNLIB) /lib/$(DYNLIBNAME)
 		
 $(BUILDDIRS):
@@ -51,6 +55,10 @@ $(BUILDDIRS):
 		done;
 
 $(BUILDL)/%.o: %.cpp
+		@echo "	" CC $<
+		@$(CC) $(CFLAGS) -o $@ -c $< -MMD
+
+$(BUILDL)/%_pic.o: %.cpp
 		@echo "	" CC $<
 		@$(CC) $(CFLAGS) -fPIC -o $@ -c $< -MMD
 
@@ -62,4 +70,4 @@ $(STARTO): $(START)
 
 clean:
 		@echo "===== REMOVING FILES =====";
-		rm -f $(COBJS) $(STLIB) $(DYNLIB) $(DEPS) $(STARTO)
+		rm -f $(COBJS) $(CPICOBJS) $(STLIB) $(DYNLIB) $(DEPS) $(STARTO)
