--- a/drivers/vterm/Makefile
+++ b/drivers/vterm/Makefile
@@ -1,9 +1,8 @@
 NAME=vterm
 ifeq ($(LINKTYPE),static)
 	ADDLIBS += $(BUILD)/libvterm.a
-	ADDFLAGS = -I../../lib
 else
-	ADDFLAGS = -I../../lib -lvterm
+	ADDFLAGS = -lvterm
 endif
 
 -include ../ShlibMakefile.mk
