--- a/user/cpp/guishell/Makefile
+++ b/user/cpp/guishell/Makefile
@@ -1,9 +1,8 @@
 NAME = guishell
 ifeq ($(LINKTYPE),static)
 	ADDLIBS += $(BUILD)/libshell.a $(BUILD)/libvterm.a
-	ADDFLAGS = -I../../../lib
 else
-	ADDFLAGS = -I../../../lib -lshell -lvterm
+	ADDFLAGS = -lshell -lvterm
 endif
 
 -include ../DefMakefile.mk
