--- a/drivers/vesatext/Makefile
+++ b/drivers/vesatext/Makefile
@@ -1,9 +1,8 @@
 NAME=vesatext
 ifeq ($(LINKTYPE),static)
 	ADDLIBS += $(BUILD)/libvbe.a
-	ADDFLAGS = -I../../lib
 else
-	ADDFLAGS = -I../../lib -lvbe
+	ADDFLAGS = -lvbe
 endif
 
 -include ../ShlibMakefile.mk
