--- a/tools/dump/Makefile
+++ b/tools/dump/Makefile
@@ -29,7 +29,7 @@ $(BUILDDIRS):
 
 $(BUILDL)/%.o:		%.cpp
 		@echo "	" CC $<
-		@$(CC) $(CFLAGS) -o $@ -c $< -MMD
+		@$(CC) $(CFLAGS) -o $@ -c $< -MD
 
 -include $(DEPS)
 
