--- a/lib/c/Makefile
+++ b/lib/c/Makefile
@@ -1,7 +1,6 @@
 ROOT = ../..
 BUILDL = $(BUILD)/lib/c
 LIBDIR = $(ROOT)/lib/basic
-GCCLIBDIR = $(ROOT)/lib/gcc
 SUBDIRS = $(filter-out $(shell find . -name "*.*"),$(shell find . -name "*"))
 LSUBDIRS = $(filter-out $(wildcard $(LIBDIR)/*.*),$(wildcard $(LIBDIR)/*))
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS)) $(patsubst $(LIBDIR)/%,$(BUILDL)/lib/%,$(LSUBDIRS))
@@ -11,42 +10,39 @@ DYNLIBNAME = libc.so
 DYNLIB = $(BUILD)/$(DYNLIBNAME)
 SHLDCONF = ../shld.conf
 
-CC = gcc
-CFLAGS = -nostdlib -nostartfiles -nodefaultlibs $(CDEFFLAGS) -I$(ROOT)/include
+AR = $(ROOT)/build/dist/bin/i586-elf-escape-ar
+CC = $(ROOT)/build/dist/bin/i586-elf-escape-gcc
+LD = $(ROOT)/build/dist/bin/i586-elf-escape-ld
+CFLAGS = -nostdlib -nostartfiles -nodefaultlibs $(CDEFFLAGS)
 
 # sources
-CSRC = $(shell find . -name "*.c")
-ASRC = $(filter-out startup.s,$(shell find . -name "*.s"))
-LSRC = $(shell find $(LIBDIR) -name "*.c")
 START = startup.s
 SYSCALLS = syscalls.s
+CSRC = $(shell find . -name "*.c")
+ASRC = $(filter-out ./$(START),$(shell find . -name "*.s"))
+LSRC = $(shell find $(LIBDIR) -name "*.c")
 
 # objects
+STARTO = $(BUILD)/libc_startup.o
 COBJS = $(patsubst %.c,$(BUILDL)/%.o,$(CSRC))
 CPICOBJS = $(patsubst %.c,$(BUILDL)/%_pic.o,$(CSRC))
 AOBJS = $(patsubst %.s,$(BUILDL)/%.s.o,$(ASRC))
 APICOBJS = $(patsubst %.s,$(BUILDL)/%_pic.s.o,$(ASRC))
 LOBJ = $(patsubst $(LIBDIR)/%.c,$(BUILDL)/lib/%.o,$(LSRC))
 LPICOBJ = $(patsubst $(LIBDIR)/%.c,$(BUILDL)/lib/%_pic.o,$(LSRC))
-STARTO = $(BUILD)/libc_startup.o
-# for long long arithmetic
-GCCLIB = $(GCCLIBDIR)/_divdi3.object \
-	$(GCCLIBDIR)/_moddi3.object \
-	$(GCCLIBDIR)/_udivdi3.object \
-	$(GCCLIBDIR)/_umoddi3.object
 
 .PHONY:		all clean
 
-all: $(STLIB) $(DYNLIB) $(STARTO)
+all: $(BUILDDIRS) $(STLIB) $(DYNLIB) $(STARTO)
 
-$(STLIB): $(BUILDDIRS) $(COBJS) $(AOBJS) $(LOBJ) $(GCCLIB)
+$(STLIB): $(COBJS) $(AOBJS) $(LOBJ)
 		@echo "	" AR $(STLIB)
-		@ar rcs $(STLIB) $(COBJS) $(AOBJS) $(LOBJ) $(GCCLIB)
+		@$(AR) rcs $(STLIB) $(COBJS) $(AOBJS) $(LOBJ)
 
-$(DYNLIB):	$(BUILDDIRS) $(CPICOBJS) $(APICOBJS) $(LPICOBJ) $(GCCLIB) $(SHLDCONF)
+$(DYNLIB): $(CPICOBJS) $(APICOBJS) $(LPICOBJ) $(SHLDCONF)
 		@echo "	" LINKING $(DYNLIB)
-		@$(CC) $(CFLAGS) -shared -Wl,--build-id=none -Wl,-T,$(SHLDCONF) -Wl,-soname,$(DYNLIBNAME) \
-			-o $(DYNLIB) $(CPICOBJS) $(APICOBJS) $(LPICOBJ) $(GCCLIB);
+		@$(LD) -shared -soname $(DYNLIBNAME) -o $(DYNLIB) \
+			$(CPICOBJS) $(APICOBJS) $(LPICOBJ)
 		$(ROOT)/tools/disk.sh copy $(DYNLIB) /lib/$(DYNLIBNAME)
 		
 $(BUILDDIRS):
@@ -56,11 +52,11 @@ $(BUILDDIRS):
 
 $(BUILDL)/%.o: %.c
 		@echo "	" CC $<
-		@$(CC) $(CFLAGS) -o $@ -c $< -MMD
+		@$(CC) $(CFLAGS) -o $@ -c $< -MD
 
 $(BUILDL)/%_pic.o: %.c
 		@echo "	" CC $<
-		@$(CC) $(CFLAGS) -fPIC -o $@ -c $< -MMD
+		@$(CC) $(CFLAGS) -fPIC -o $@ -c $< -MD
 
 $(BUILDL)/%_pic.s.o: %.s $(SYSCALLS)
 		@echo "	" AS $<
@@ -72,11 +68,11 @@ $(BUILDL)/%.s.o: %.s $(SYSCALLS)
 
 $(BUILDL)/lib/%.o:	$(LIBDIR)/%.c
 		@echo "	" CC $<
-		@$(CC) $(CFLAGS) -o $@ -c $< -MMD
+		@$(CC) $(CFLAGS) -o $@ -c $< -MD
 
 $(BUILDL)/lib/%_pic.o:	$(LIBDIR)/%.c
 		@echo "	" CC $<
-		@$(CC) $(CFLAGS) -fPIC -o $@ -c $< -MMD
+		@$(CC) $(CFLAGS) -fPIC -o $@ -c $< -MD
 
 $(STARTO): $(START)
 		@echo "	" AS $(START)
