--- a/user/c/shlibtest/Makefile
+++ b/user/c/shlibtest/Makefile
@@ -6,16 +6,11 @@ SHLIBNAME = lib$(NAME).so
 SECLIBNAME = lib$(NAME)2.so
 SHLIB = $(BUILD)/$(SHLIBNAME)
 SECLIB = $(BUILD)/$(SECLIBNAME)
-LIBC = $(ROOT)/lib/c
-LDCONF = $(ROOT)/lib/ld.conf
-SHLDCONF = $(ROOT)/lib/shld.conf
 SUBDIRS = . $(filter-out Makefile $(wildcard *.*),$(wildcard *))
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
 DEPS = $(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
 
-CC = gcc
-CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -I$(ROOT)/include \
-	-Wl,--build-id=none $(CDEFFLAGS) $(ADDFLAGS)
+CFLAGS = $(CDEFFLAGS) $(ADDFLAGS)
 
 # sources
 LIBSRC = shltlib.c
@@ -23,33 +18,29 @@ SECLIBSRC = seclib.c
 CSRC = shltmain.c
 
 # objects
-LIBCA = $(BUILD)/libc.a
-START = $(BUILD)/libc_startup.o
 LIBOBJ = $(patsubst %.c,$(BUILDL)/lib%.o,$(LIBSRC))
 SECLIBOBJ = $(patsubst %.c,$(BUILDL)/lib2%.o,$(SECLIBSRC))
 COBJ = $(patsubst %.c,$(BUILDL)/%.o,$(CSRC))
 
 .PHONY: all clean
 
-all:	$(APPCPY) $(BIN)
+all:	$(BUILDDIRS) $(APPCPY) $(BIN)
 
-$(BIN):	$(BUILDDIRS) $(LDCONF) $(COBJ) $(START) $(LIBCA) $(SHLIB) $(SECLIB)
+$(BIN):	$(COBJ) $(SHLIB) $(SECLIB)
 		@echo "	" LINKING $(BIN)
-		@$(CC) $(CFLAGS) $(DLNKFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) -l$(NAME) -l$(NAME)2 \
-			$(START) $(COBJ) $(LIBCA);
+		@$(CC) $(CFLAGS) -o $(BIN) -l$(NAME) -l$(NAME)2 $(COBJ);
 		@echo "	" COPYING ON DISK
 		$(ROOT)/tools/disk.sh copy $(BIN) /bin/$(NAME)
 
-$(SECLIB): $(SECLIBOBJ) $(SHLDCONF)
+$(SECLIB): $(SECLIBOBJ)
 		@echo "	" LINKING $(SECSHLIB)
-		@$(CC) $(CFLAGS) -Wl,-T,$(SHLDCONF) -shared -Wl,-soname,$(SECLIBNAME) -o $(SECLIB) \
-			$(SECLIBOBJ) $(LIBCA);
+		@$(LD) -shared -soname $(SECLIBNAME) -o $(SECLIB) $(SECLIBOBJ);
 		@echo "	" COPYING ON DISK
 		$(ROOT)/tools/disk.sh copy $(SECLIB) /lib/$(SECLIBNAME)
 
-$(SHLIB): $(LIBOBJ) $(SHLDCONF)
+$(SHLIB): $(LIBOBJ)
 		@echo "	" LINKING $(SHLIB)
-		@$(CC) $(CFLAGS) -Wl,-T,$(SHLDCONF) -shared -Wl,-soname,$(SHLIBNAME) -o $(SHLIB) $(LIBOBJ) $(LIBCA);
+		@$(LD) -shared -soname $(SHLIBNAME) -o $(SHLIB) $(LIBOBJ);
 		@echo "	" COPYING ON DISK
 		$(ROOT)/tools/disk.sh copy $(SHLIB) /lib/$(SHLIBNAME)
 
