--- a/lib/shell/Makefile
+++ b/lib/shell/Makefile
@@ -32,10 +32,12 @@ all:	$(BUILDDIRS) $(BISONGEN) $(LEXGEN) $(STLIB) $(DYNLIB)
 $(STLIB): $(COBJ) $(GENOBJ)
 		@echo "	" AR $(STLIB)
 		@$(AR) rcs $(STLIB) $(COBJ) $(GENOBJ)
+		$(ROOT)/tools/linklib.sh $(STLIB)
 
 $(DYNLIB):	$(CPICOBJS) $(PICGENOBJ) $(SHLDCONF)
 		@echo "	" LINKING $(DYNLIB)
 		@$(LD) -shared -soname $(DYNLIBNAME) -o $(DYNLIB) $(CPICOBJS) $(PICGENOBJ);
+		$(ROOT)/tools/linklib.sh $(DYNLIB)
 		$(ROOT)/tools/disk.sh copy $(DYNLIB) /lib/$(DYNLIBNAME)
 
 $(LEXGEN):	$(LEXSRC)
