--- a/lib/d/Makefile
+++ b/lib/d/Makefile
@@ -1,7 +1,6 @@
 ROOT = ../..
 BUILDL = $(BUILD)/lib/d
 LIBCDIR = $(ROOT)/lib/c
-GCCLIBDIR = $(ROOT)/lib/gcc
 SUBDIRS = $(filter-out Makefile $(shell find . -name "*.*"),$(shell find . -name "*"))
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
 DEPS = $(shell find $(BUILDDIRS) -name "*.d")
@@ -21,22 +20,15 @@ START = startup.s
 # objects
 COBJS = $(patsubst %.c,$(BUILDL)/%.o,$(CSRC))
 DOBJS = $(patsubst %.d,$(BUILDL)/%.o,$(DSRC))
-
-# for long long arithmetic
-GCCLIB = $(GCCLIBDIR)/_divdi3.object \
-	$(GCCLIBDIR)/_moddi3.object \
-	$(GCCLIBDIR)/_udivdi3.object \
-	$(GCCLIBDIR)/_umoddi3.object
-LIBCOBJS = $(shell find $(BUILD)/lib/c -name "*.o") $(GCCLIB)
 STARTO = $(BUILD)/libd_startup.o
 
 .PHONY:		all clean
 
-all: $(LIB)
+all: $(BUILDDIRS) $(LIB) $(STARTO)
 
-$(LIB): $(BUILDDIRS) $(COBJS) $(DOBJS) $(STARTO) $(LIBCOBJS)
+$(LIB): $(COBJS) $(DOBJS)
 		@echo "	" AR $(LIB)
-		@ar rcs $(LIB) $(LIBCOBJS) $(COBJS) $(DOBJS)
+		@ar rcs $(LIB) $(COBJS) $(DOBJS)
 		$(ROOT)/tools/linklib.sh $(LIB)
 		
 $(BUILDDIRS):
