Now we're using gas for everything :)

--- a/kernel/ld.conf
+++ b/kernel/ld.conf
@@ -5,18 +5,18 @@ SECTIONS
 {
 	. = 0x100000;
 
-	.setup :
+	.init :
 	{
-		*(.setup)
+		*(.init)
 	}
 
 	. += 0xC0000000;
-
+	
 	.text : AT(ADDR(.text) - 0xC0000000)
 	{
 		*(.text)
 	}
-
+	
 	.data ALIGN (4096) : AT(ADDR(.data) - 0xC0000000)
 	{
 		*(.data)
