--- a/user/c/dynlink/Makefile
+++ b/user/c/dynlink/Makefile
@@ -38,7 +38,7 @@ $(BUILDL)/%.o:		%.c
 
 $(BUILDL)/%.s.o:	%.s
 		@echo "	" AS $<
-		@nasm $(ASMFLAGS) -o $@ $<
+		@$(AS) $(ASFLAGS) -o $@ $<
 
 -include $(DEPS)
 
