--- a/user/c/x86mark/Makefile
+++ b/user/c/x86mark/Makefile
@@ -17,9 +17,11 @@ COBJ = $(patsubst %.c,$(BUILDL)/%.o,$(CSRC))
 
 .PHONY: all clean
 
-all:	$(BIN)
+-include $(ROOT)/sysdeps.mk
 
-$(BIN):	$(BUILDDIRS) $(COBJ) $(ASM) $(ADDLIBS)
+all:	$(BUILDDIRS) $(BIN)
+
+$(BIN):	$(DEP_START) $(DEP_DEFLIBS) $(COBJ) $(ASM) $(ADDLIBS)
 		@echo "	" LINKING $(BIN)
 		@$(CC) $(CFLAGS) -o $(BIN) $(COBJ) $(ASM) $(ADDLIBS);
 		@echo "	" COPYING ON DISK
