--- a/user/c/shlibtest/Makefile
+++ b/user/c/shlibtest/Makefile
@@ -24,22 +24,24 @@ COBJ = $(patsubst %.c,$(BUILDL)/%.o,$(CSRC))
 
 .PHONY: all clean
 
+-include $(ROOT)/sysdeps.mk
+
 all:	$(BUILDDIRS) $(APPCPY) $(BIN)
 
-$(BIN):	$(COBJ) $(SHLIB) $(SECLIB)
+$(BIN):	$(DEP_START) $(DEP_DEFLIBS) $(COBJ) $(SHLIB) $(SECLIB)
 		@echo "	" LINKING $(BIN)
 		@$(CC) $(CFLAGS) -o $(BIN) -l$(NAME) -l$(NAME)2 $(COBJ);
 		@echo "	" COPYING ON DISK
 		$(ROOT)/tools/disk.sh copy $(BIN) /bin/$(NAME)
 
-$(SECLIB): $(SECLIBOBJ)
+$(SECLIB): $(DEP_START) $(DEP_DEFLIBS) $(SECLIBOBJ)
 		@echo "	" LINKING $(SECSHLIB)
 		@$(LD) -shared -soname $(SECLIBNAME) -o $(SECLIB) $(SECLIBOBJ);
 		@echo "	" COPYING ON DISK
 		$(ROOT)/tools/linklib.sh $(SECLIB)
 		$(ROOT)/tools/disk.sh copy $(SECLIB) /lib/$(SECLIBNAME)
 
-$(SHLIB): $(LIBOBJ)
+$(SHLIB): $(DEP_START) $(DEP_DEFLIBS) $(LIBOBJ)
 		@echo "	" LINKING $(SHLIB)
 		@$(LD) -shared -soname $(SHLIBNAME) -o $(SHLIB) $(LIBOBJ);
 		@echo "	" COPYING ON DISK
