Fixed a bug in the vfs-request-handling. Now request are retried if drivers die (that don't affect us). This way it works again to start two guishells in parallel :)

--- a/user/cpp/guishell/Makefile
+++ b/user/cpp/guishell/Makefile
@@ -1,4 +1,8 @@
 NAME = guishell
-ADDFLAGS = -lshell -lvterm
+ifeq ($(LINKTYPE),static)
+	ADDLIBS += $(BUILD)/libvterm.a $(BUILD)/libshell.a
+else
+	ADDFLAGS = -lvterm -lshell
+endif
 
 -include ../DefMakefile.mk
