--- a/user/cpp/desktop/Makefile
+++ b/user/cpp/desktop/Makefile
@@ -1,3 +1,8 @@
 NAME = desktop
+ifeq ($(LINKTYPE),static)
+	ADDLIBS += $(BUILD)/libgui.a
+else
+	ADDFLAGS = -lgui
+endif
 
 -include ../DefMakefile.mk
